<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="com.martinlaizg.geofind.ui.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_tour_list"
		android:name="com.martinlaizg.geofind.ui.tourlist.TourListFragment"
		android:label="@string/title_tour_list"
		tools:layout="@layout/fragment_tourlist" />

	<fragment
		android:id="@+id/navigation_profile"
		android:name="com.martinlaizg.geofind.ui.profile.ProfileFragment"
		android:label="@string/title_profile"
		tools:layout="@layout/fragment_profile" />
</navigation>