<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/frameLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="16dp"
	android:paddingTop="16dp"
	android:paddingEnd="16dp"
	android:paddingBottom="16dp">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/layout_input_text_tour_title"
		style="@style/AppTheme.TextInputLayout.Outlined"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/input_tour_title"
		app:errorEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/input_text_tour_title"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/layout_input_text_tour_description"
		style="@style/AppTheme.TextInputLayout.Outlined"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/input_tour_description"
		app:errorEnabled="true"
		app:hintAnimationEnabled="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/layout_input_text_tour_title">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/input_text_tour_description"
			android:layout_width="match_parent"
			android:layout_height="300dp"
			android:gravity="start|top"
			android:inputType="textMultiLine"
			android:singleLine="false" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_create_tour"
		style="@style/AppTheme.Button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/create"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/layout_input_text_tour_description" />

</androidx.constraintlayout.widget.ConstraintLayout>